syntax = "proto3";

import "api/protobuf/login/login.proto";
import "api/protobuf/timeline/timeline.proto";
import "api/protobuf/portfolio/portfolio.proto";
import "api/protobuf/savingsplan/savingsplan.proto";
import "google/protobuf/empty.proto";



package pb;

option go_package = "github.com/Sannrox/tradepipe/gear/protobuf";

message Alive {
    string status = 1;
    int64 serverTime  = 2;
}

service TradePipe {
    rpc Alive(google.protobuf.Empty) returns (pb.Alive){}
    rpc Login(login.Credentials) returns (login.ProcessId){}
    rpc Verify(login.TwoFAAsks) returns (login.TwoFAReturn){}
    rpc Timeline(timeline.RequestTimeline) returns (timeline.ResponseTimeline){}
    rpc TimelineDetails(timeline.RequestTimeline) returns (timeline.ResponseTimeline){}
    rpc Positions(portfolio.RequestPositions) returns (portfolio.ResponsePositions){}
    rpc SavingsPlans(savingsplan.RequestSavingsplan) returns (savingsplan.ResponseSavingsplan){}
}

